# atlas

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MEMORY_SYSTEM_SETUP.md  README.md  TESTING_GUIDE.md  bot.py  db_manager.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  research.md  test-plan.md
.github/workflows/: ci.yml  e2e.yml
config/: roster.json
discord-bot/: .env.example  .gitignore  Dockerfile  README.md  bot.py
docs/: WEB_SEARCH_GUIDE.md
models/: memory.py
tests/: conftest.py
tests/contract/: conftest.py  test_openrouter_contract.py  test_roster_contract.py
tests/e2e/: conftest.py  test_discord_e2e.py
tests/fixtures/: openrouter_error.json  openrouter_success.json  openrouter_tool_call.json  roster_test.json
tests/integration/: conftest.py  test_db_integration.py
tests/unit/: conftest.py  test_db_manager.py  test_embed_building.py  test_models.py  test_officer_querying.py  test_research_markdown.py
